--- a/prodotti.html
+++ b/prodotti.html
@@ -17,7 +17,8 @@
     <!-- mobile settings -->
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
     <!-- WEB FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">    <!-- CORE CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
+    <!-- CORE CSS -->
     <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
@@ -41,8 +42,8 @@
 							<img src="./extra/logo.png" alt="" height="40"> 
 						</a>
                 </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" style="background-color:white;" id="bs-example-navbar-collapse-1">
+                <!-- Collect the nav links, forms, and other content for togglingz -->
+                <div class="collapse navbar-collapse" style="background-color:white;z-index:10" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a href="index.html">HOME</a>
@@ -74,22 +75,12 @@
             <div class="container">
                 <header>
                     <h1 class="text-center">PRODOTTI</h1>
-                    <p class="lead text-center">Con Omeoenergetica , offriamo alle nostre clienti molto più che semplice
+                    <p class="lead text-center">Con Omeoenergetica, offriamo alle nostre clienti molto più che semplice
                         bellezza.
-                        <br>
                         <br>Un trattamento estetico che rimane in superficie rischia infatti di dare
                         risultati che svaniscono in breve.
                         <br>
-                        <br>Omeoenergetica invece entra in profondità e agisce a diversi livelli,
-                        in base al principio che ogni singola parte non può essere isolata dall'altra.
-                        Solo così è possibile risolvere in modo radicale problemi frequenti come
-                        la cellulite e l'adipe localizzata, le gambe pesanti e l'ipotonia dei tessuti,
-                        l'invecchiamento del viso e quello del corpo. L'obiettivo fondamentale
-                        è di risvegliare le energie complessive nascoste nel fisico che, con il
-                        tempo o lo stress, subiscono blocchi e alterazioni. Sollecitando i punti
-                        chiave attraverso cui scorre l'energia vitale, vengono ridistribuite armoniosamente
-                        le cariche energetiche naturali e ricreata quella situazione di equilibrio
-                        interno che si riflette in una pelle giovane, sana e luminosa.</p>
+                        <br>Con Esthederm trattiamo la pelle in maniera dinamica in funzione dei suoi ritmi stagionali, dei cicli del giorno e della notte, e della sua evoluzione nel tempo.Tutti i prodotti Esthederm sono formulati con acqua cellulare che ottimizza l'ambiente energetico delle cellule.</p>
                 </header>
                 <div class="divider">
                     <!-- lines divider -->
