--- a/chisiamo.html
+++ b/chisiamo.html
@@ -1,202 +1,177 @@
 <html><head></head><body>
-    <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
-      <style>
-        .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
-      </style>
-    </div>
-    <script async="" src="./extra/analytics.js"></script>
-    <script type="text/javascript">
-      window["_gaUserPrefs"] = { ioo : function() { return true; } }
-    </script>
-  <!--<![endif]-->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta charset="utf-8">
-  <title>Image di Paola Braga - Chi Siamo</title>
-  <meta name="keywords" content="">
-  <meta name="description" content="">
-  <!-- mobile settings -->
-  <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
-  <!-- WEB FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
-  <!-- CORE CSS -->
-  <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
-  <link href="./extra/owl.theme.css" rel="stylesheet" type="text/css">
-  <link href="./extra/owl.transitions.css" rel="stylesheet" type="text/css">
-  <link href="./extra/magnific-popup.css" rel="stylesheet" type="text/css">
-  <!-- THEME CSS -->
-  <link href="./extra/layout.css" rel="stylesheet" type="text/css">
-  <!-- Morenizr -->
-  <script type="text/javascript" src="./extra/modernizr.min.js"></script>
-  <style type="text/css"></style>
-  <header id="header">
-    <nav class="navbar navbar-inverse" role="navigation">
-      <!-- add "white" class for white nav bar -->
-      <div class="container">
-        <!-- Mobile Menu Button -->
-        <button id="mobileMenu" class="fa fa-bars" type="button" data-toggle="collapse" data-target=".navbar-collapse"></button>
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">
+        <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
+            <style>
+                .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
+            </style>
+        </div>
+        <script async="" src="./extra/analytics.js"></script>
+        <script type="text/javascript">
+            window["_gaUserPrefs"] = { ioo : function() { return true; } }
+        </script>
+    <!--<![endif]-->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <title>Image di Paola Braga - Chi Siamo</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <!-- mobile settings -->
+    <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
+    <!-- WEB FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
+    <!-- CORE CSS -->
+    <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
+    <link href="./extra/owl.theme.css" rel="stylesheet" type="text/css">
+    <link href="./extra/owl.transitions.css" rel="stylesheet" type="text/css">
+    <link href="./extra/magnific-popup.css" rel="stylesheet" type="text/css">
+    <!-- THEME CSS -->
+    <link href="./extra/layout.css" rel="stylesheet" type="text/css">
+    <!-- Morenizr -->
+    <script type="text/javascript" src="./extra/modernizr.min.js"></script>
+    <style type="text/css"></style>
+    <header id="header">
+        <nav class="navbar navbar-inverse" role="navigation">
+            <!-- add "white" class for white nav bar -->
+            <div class="container">
+                <!-- Mobile Menu Button -->
+                <button id="mobileMenu" class="fa fa-bars" type="button" data-toggle="collapse" data-target=".navbar-collapse"></button>
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">
 							<img src="./extra/logo.png" alt="" height="40"> 
 						</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="index.html">HOME</a>
-            </li>
-            <li class="active">
-              <a href="chisiamo.html">CHI SIAMO</a>
-            </li>
-            <li>
-              <a href="trattamenti.html">TRATTAMENTI</a>
-            </li>
-            <li>
-              <a href="prodotti.html">PRODOTTI</a>
-            </li>
-            <li>
-              <a href="solari.html">FOCUS ON</a>
-            </li>
-            <li>
-              <a href="contact.html">CONTATTI</a>
-            </li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-    </nav>
-  </header>
-  <!-- MIDDLE -->
-  <section id="middle">
-    <div class="alternate">
-      <div class="container">
-        <header>
-          <h1 class="uppercase text-center">CHI SIAMO</h1>
-          <p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas metus
-            nulla, commodo a sodales sed, dignissim pretium nunc. Nam et lacus neque.
-            Ut enim massa, sodales tempor convallis et, iaculis ac massa.</p>
-        </header>
-        <div class="divider">
-          <!-- lines divider -->
-        </div>
-        <div class="row" >
-
-          <div class="col-md-offset-4 col-md-4">
-                  <div class="thumbnail">
-
-                    <!-- image -->
-                    <img class="img-responsive" src="images/1.jpg" alt="team">
-
-                    <!-- caption -->
-                    <div class="caption text-center">
-                      <h4><!-- name + occupation -->
-                        Paola Braga
-                        <small class="block fsize13">Responsabile</small>
-                      </h4>
-
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li class="active">
+                            <a href="chisiamo.html">CHI SIAMO</a>
+                        </li>
+                        <li>
+                            <a href="trattamenti.html">TRATTAMENTI</a>
+                        </li>
+                        <li>
+                            <a href="prodotti.html">PRODOTTI</a>
+                        </li>
+                        <li>
+                            <a href="solari.html">FOCUS ON</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">CONTATTI</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+        </nav>
+    </header>
+    <!-- MIDDLE -->
+    <section id="middle">
+        <div class="alternate">
+            <div class="container">
+                <header>
+                    <h1 class="uppercase text-center">CHI SIAMO</h1>
+                    <p class="lead text-center" contenteditable="true">Image è un centro di bellezza in cui l'attenzione al tuo tempo è fondamentale: è il percorso di bellezza che si adatta al tuo stile di vita e ai tuoi ritmi, con trattamenti che privilegiano la qualità e l'intensità.</p>
+                </header>
+                <div class="divider">
+                    <!-- lines divider -->
+                </div>
+                <div class="row">
+                    <div class="col-md-offset-4 col-md-4">
+                        <div class="thumbnail">
+                            <!-- image -->
+                            <img class="img-responsive" src="images/1.jpg" alt="team">
+                            <!-- caption -->
+                            <div class="caption text-center">
+                                <h4>
+                                    <!-- name + occupation -->Paola Braga
+                                    <small class="block fsize13">Responsabile</small>
+                                </h4>
+                            </div>
+                            <!-- /caption -->
+                        </div>
                     </div>
-                    <!-- /caption -->
-
-                  </div>
-          </div>
-
-
-        </div>
-
-        <div class="row" >
-
-          <div class="col-md-offset-4 col-md-4">
-                  <div class="thumbnail">
-
-                    <!-- image -->
-                    <img class="img-responsive" src="images/1.jpg" alt="team">
-
-                    <!-- caption -->
-                    <div class="caption text-center">
-                      <h4><!-- name + occupation -->
-                        Paola Braga
-                        <small class="block fsize13">Responsabile</small>
-                      </h4>
-
+                </div>
+                <div class="row">
+                    <div class="col-md-offset-4 col-md-4">
+                        <div class="thumbnail">
+                            <!-- image -->
+                            <img class="img-responsive" src="images/1.jpg" alt="team">
+                            <!-- caption -->
+                            <div class="caption text-center">
+                                <h4>
+                                    <!-- name + occupation -->Paola Braga
+                                    <small class="block fsize13">Responsabile</small>
+                                </h4>
+                            </div>
+                            <!-- /caption -->
+                        </div>
                     </div>
-                    <!-- /caption -->
-
-                  </div>
-          </div>
-
-
-        </div>
-
-        <div class="row" >
-
-          <div class="col-md-offset-4 col-md-4">
-                  <div class="thumbnail">
-
-                    <!-- image -->
-                    <img class="img-responsive" src="images/1.jpg" alt="team">
-
-                    <!-- caption -->
-                    <div class="caption text-center">
-                      <h4><!-- name + occupation -->
-                        Paola Braga
-                        <small class="block fsize13">Responsabile</small>
-                      </h4>
-
+                </div>
+                <div class="row">
+                    <div class="col-md-offset-4 col-md-4">
+                        <div class="thumbnail">
+                            <!-- image -->
+                            <img class="img-responsive" src="images/1.jpg" alt="team">
+                            <!-- caption -->
+                            <div class="caption text-center">
+                                <h4>
+                                    <!-- name + occupation -->Paola Braga
+                                    <small class="block fsize13">Responsabile</small>
+                                </h4>
+                            </div>
+                            <!-- /caption -->
+                        </div>
                     </div>
-                    <!-- /caption -->
-
-                  </div>
-          </div>
-
-
+                </div>
+            </div>
+            <div>
+                <div class="clearfix spacer">
+                    <!-- 60px spacer -->
+                </div>
+                <div class="text-center">
+                    <h1>
+                        <!-- iPhones, Androids and other mobile devices will recognize the phone
+                        number -->
+                        <a class="phonelink" href="tel:+1800-555-1234">02- 9382322</a>
+                        <small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
+                    </h1>
+                </div>
+            </div>
         </div>
-
-    </div>
-    <div>
-      <div class="clearfix spacer">
-        <!-- 60px spacer -->
-      </div>
-      <div class="text-center">
-        <h1>
-          <!-- iPhones, Androids and other mobile devices will recognize the phone
-          number -->
-          <a class="phonelink" href="tel:+1800-555-1234">02- 9382322</a>
-          <small class="block font300 fsize15">VIA S.ANNA 8, ARESE</small>
-        </h1>
-      </div>
-    </div>
-  </section>
-  <!-- /MIDDLE -->
-  <!-- FOOTER -->
-  <footer>
-    <!-- SCROOL TO TOP -->
-    <a href="http://theme.stepofweb.com/Agretti/v1.0/MASSAGE/about.html#toTop" class="fa fa-arrow-up toTop"></a>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 copyright">Image
-          <br>2015 © All Rights Reserved.</div>
-        <div class="col-md-6 text-right">
-          <a href="" class="social fa fa-facebook"></a>
-          <a href="" class="social fa fa-twitter"></a>
+    </section>
+    <!-- /MIDDLE -->
+    <!-- FOOTER -->
+    <footer>
+        <!-- SCROOL TO TOP -->
+        <a href="http://theme.stepofweb.com/Agretti/v1.0/MASSAGE/about.html#toTop" class="fa fa-arrow-up toTop"></a>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 copyright">Image
+                    <br>2015 © All Rights Reserved.</div>
+                <div class="col-md-6 text-right">
+                    <a href="" class="social fa fa-facebook"></a>
+                    <a href="" class="social fa fa-twitter"></a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </footer>
-  <!-- /FOOTER -->
-  <!-- JAVASCRIPT FILES -->
-  <script type="text/javascript" src="./extra/jquery-2.0.3.min.js"></script>
-  <script type="text/javascript" src="./extra/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./extra/jquery.magnific-popup.min.js"></script>
-  <script type="text/javascript" src="./extra/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="./extra/jquery.cycle.all.min.js"></script>
-  <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
-  <script type="text/javascript" src="./extra/scripts.js"></script>
-  <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-  Go to http://www.google.com/analytics/ for more information. -->
-  <!--<script>
+    </footer>
+    <!-- /FOOTER -->
+    <!-- JAVASCRIPT FILES -->
+    <script type="text/javascript" src="./extra/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="./extra/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./extra/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="./extra/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="./extra/jquery.cycle.all.min.js"></script>
+    <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
+    <script type="text/javascript" src="./extra/scripts.js"></script>
+    <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
+    Go to http://www.google.com/analytics/ for more information. -->
+    <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -206,6 +181,6 @@
 			ga('send', 'pageview');
 		</script>
 		-->
-  
+    
 
 </body></html>
