--- a/solari.html
+++ b/solari.html
@@ -1,155 +1,156 @@
 <html><head></head><body>
-    <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
-      <style>
-        .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
-      </style>
-    </div>
-    <script async="" src="./extra/analytics.js"></script>
-    <script type="text/javascript">
-      window["_gaUserPrefs"] = { ioo : function() { return true; } }
-    </script>
-  <!--<![endif]-->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta charset="utf-8">
-  <title>Image di Paola Braga - Solari</title>
-  <meta name="keywords" content="">
-  <meta name="description" content="">
-  <!-- mobile settings -->
-  <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
-  <!-- WEB FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">  <!-- CORE CSS -->
-  <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
-  <link href="./extra/owl.theme.css" rel="stylesheet" type="text/css">
-  <link href="./extra/owl.transitions.css" rel="stylesheet" type="text/css">
-  <link href="./extra/magnific-popup.css" rel="stylesheet" type="text/css">
-  <!-- THEME CSS -->
-  <link href="./extra/layout.css" rel="stylesheet" type="text/css">
-  <!-- Morenizr -->
-  <script type="text/javascript" src="./extra/modernizr.min.js"></script>
-  <style type="text/css">
-    .subtitle {
-        font-family: 'Open Sans';
-        font-size: 28px;
-        line-height: 26px;
-        padding-bottom: 10;
-        margin: 0;
-    }
-  </style>
-  <header id="header">
-    <nav class="navbar navbar-inverse" role="navigation">
-      <!-- add "white" class for white nav bar -->
-      <div class="container">
-        <!-- Mobile Menu Button -->
-        <button id="mobileMenu" class="fa fa-bars" type="button" data-toggle="collapse" data-target=".navbar-collapse"></button>
-        <!-- /.navbar-collapse -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">
+        <div class="fit-vids-style" id="fit-vids-style" style="display: none;">­
+            <style>
+                .fluid-width-video-wrapper {                   width: 100%;                                position: relative;                         padding: 0;                              }                                                                                       .fluid-width-video-wrapper iframe,          .fluid-width-video-wrapper object,          .fluid-width-video-wrapper embed {             position: absolute;                         top: 0;                                     left: 0;                                    width: 100%;                                height: 100%;                            }
+            </style>
+        </div>
+        <script async="" src="./extra/analytics.js"></script>
+        <script type="text/javascript">
+            window["_gaUserPrefs"] = { ioo : function() { return true; } }
+        </script>
+    <!--<![endif]-->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <title>Image di Paola Braga - Solari</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <!-- mobile settings -->
+    <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
+    <!-- WEB FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Dosis:300,400" rel="stylesheet" type="text/css">
+    <!-- CORE CSS -->
+    <link href="./extra/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="./extra/owl.carousel.css" rel="stylesheet" type="text/css">
+    <link href="./extra/owl.theme.css" rel="stylesheet" type="text/css">
+    <link href="./extra/owl.transitions.css" rel="stylesheet" type="text/css">
+    <link href="./extra/magnific-popup.css" rel="stylesheet" type="text/css">
+    <!-- THEME CSS -->
+    <link href="./extra/layout.css" rel="stylesheet" type="text/css">
+    <!-- Morenizr -->
+    <script type="text/javascript" src="./extra/modernizr.min.js"></script>
+    <style type="text/css">
+        .subtitle {
+            font-family: 'Open Sans';
+            font-size: 28px;
+            line-height: 26px;
+            padding-bottom: 10;
+            margin: 0;
+        }
+    </style>
+    <header id="header">
+        <nav class="navbar navbar-inverse" role="navigation">
+            <!-- add "white" class for white nav bar -->
+            <div class="container">
+                <!-- Mobile Menu Button -->
+                <button id="mobileMenu" class="fa fa-bars" type="button" data-toggle="collapse" data-target=".navbar-collapse"></button>
+                <!-- /.navbar-collapse -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">
 							<img src="./extra/logo.png" alt="" height="40"> 
 						</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="index.html">HOME</a>
-            </li>
-            <li>
-              <a href="chisiamo.html">CHI SIAMO</a>
-            </li>
-            <li>
-              <a href="trattamenti.html">TRATTAMENTI</a>
-            </li>
-            <li>
-              <a href="prodotti.html">PRODOTTI</a>
-            </li>
-            <li class="active">
-              <a href="solari.html">FOCUS ON</a>
-            </li>
-            <li>
-              <a href="contact.html">CONTATTI</a>
-            </li>
-          </ul>
-        </div>
-        <!-- Brand and toggle get grouped for better mobile display -->
-      </div>
-    </nav>
-  </header>
-  <!-- MIDDLE -->
-  <section id="middle">
-    <div class="alternate">
-      <div class="container">
-        <header>
-          <h1 class="uppercase text-center ">Solari</h1>
-        </header>
-        <!-- GALLERY -->
-        <div class="p-y-lg section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6">
-                <a><img src="foto_news/timthumb_instragraph.jpeg" class="img-fluid img-thumbnail"></a>
-              </div>
-              <div class="col-md-6">
-                <h3 class="subtitle">I solari institut esthederm non sono come gli altri</h3>
-                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
-                  sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
-                  risultati di bellezza e protezione ottimali.</p>
-              </div>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="index.html">HOME</a>
+                        </li>
+                        <li>
+                            <a href="chisiamo.html">CHI SIAMO</a>
+                        </li>
+                        <li>
+                            <a href="trattamenti.html">TRATTAMENTI</a>
+                        </li>
+                        <li>
+                            <a href="prodotti.html">PRODOTTI</a>
+                        </li>
+                        <li class="active">
+                            <a href="solari.html">FOCUS ON</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">CONTATTI</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Brand and toggle get grouped for better mobile display -->
             </div>
-          </div>
-        </div>
-        <!-- -->
-        <div class="divider" style="margin-bottom: 60px;margin-top: 60px;">
-          <!-- lines divider -->
-        </div>
-        <div class="p-y-lg section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6">
-                <a><img src="foto_news/solari2.jpg" class="img-fluid img-thumbnail"></a>
-              </div>
-              <div class="col-md-6">
-                <h3 class="subtitle">I solari institut esthederm non sono come gli altri</h3>
-                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
-                  sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
-                  risultati di bellezza e protezione ottimali.</p>
-              </div>
+        </nav>
+    </header>
+    <!-- MIDDLE -->
+    <section id="middle">
+        <div class="alternate">
+            <div class="container">
+                <header>
+                    <h1 class="uppercase text-center ">NOVITà</h1>
+                </header>
+                <!-- GALLERY -->
+                <div class="p-y-lg section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a><img src="foto_news/timthumb_instragraph.jpeg" class="img-fluid img-thumbnail"></a>
+                            </div>
+                            <div class="col-md-6">
+                                <h3 class="subtitle">LASER</h3>
+                                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
+                                    sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
+                                    risultati di bellezza e protezione ottimali.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- -->
+                <div class="divider" style="margin-bottom: 60px;margin-top: 60px;">
+                    <!-- lines divider -->
+                </div>
+                <div class="p-y-lg section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a><img src="foto_news/solari2.jpg" class="img-fluid img-thumbnail"></a>
+                            </div>
+                            <div class="col-md-6">
+                                <h3 class="subtitle">Trattamento macchie cutanee</h3>
+                                <p class="lead text-left">Formule brevettate, texture ultra-sensoriali, una profumazione calda e
+                                    sensoriale e preservazione del capitale di giovinezza, il tutto per garantire
+                                    risultati di bellezza e protezione ottimali.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
+            <!-- /container -->
         </div>
-      </div>
-      <!-- /container -->
-    </div>
-  </section>
-  <!-- /MIDDLE -->
-  <!-- /FOOTER -->
-  <footer>
-    <!-- SCROOL TO TOP -->
-    <a href="#toTop" class="fa fa-arrow-up toTop"></a>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 copyright">Image
-          <br>2015 All Rights Reserved.</div>
-        <div class="col-md-6 text-right">
-          <a href="" class="social fa fa-facebook"></a>
-          <a href="" class="social fa fa-twitter"></a>
+    </section>
+    <!-- /MIDDLE -->
+    <!-- /FOOTER -->
+    <footer>
+        <!-- SCROOL TO TOP -->
+        <a href="#toTop" class="fa fa-arrow-up toTop"></a>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 copyright">Image
+                    <br>2015 All Rights Reserved.</div>
+                <div class="col-md-6 text-right">
+                    <a href="" class="social fa fa-facebook"></a>
+                    <a href="" class="social fa fa-twitter"></a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </footer>
-  <!-- FOOTER -->
-  <!-- JAVASCRIPT FILES -->
-  <script type="text/javascript" src="./extra/jquery-2.0.3.min.js"></script>
-  <script type="text/javascript" src="./extra/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./extra/jquery.magnific-popup.min.js"></script>
-  <script type="text/javascript" src="./extra/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="./extra/jquery.cycle.all.min.js"></script>
-  <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
-  <script type="text/javascript" src="./extra/scripts.js"></script>
-  <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
-  Go to http://www.google.com/analytics/ for more information. -->
-  <!--<script>
+    </footer>
+    <!-- FOOTER -->
+    <!-- JAVASCRIPT FILES -->
+    <script type="text/javascript" src="./extra/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="./extra/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./extra/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="./extra/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="./extra/jquery.cycle.all.min.js"></script>
+    <script type="text/javascript" src="./extra/jquery.maximage.min.js"></script>
+    <script type="text/javascript" src="./extra/scripts.js"></script>
+    <!-- Google Analytics: Change UA-XXXXX-X to be your site's ID.
+    Go to http://www.google.com/analytics/ for more information. -->
+    <!--<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -159,6 +160,6 @@
 			ga('send', 'pageview');
 		</script>
 		-->
-  
+    
 
 </body></html>
